added docker build in push actions

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,17 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKERHUB_PASSWORD}}
+    - name: Build and push Docker images
+  # You may pin to the exact commit or the version.
+  # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
+      uses: docker/build-push-action@v3.0.0
+      with:
+           context: ./
+           # Path to the Dockerfile
+           file: ./Dockerfile
+           # List of metadata for an image
+           push: true
+           tags: ${{ secrets.DOCKERHUB_USERNAME}}/docker-node-example:latest
+           # Sets the target stage to build
+           target: prod
     
