--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  
   build:
 
     runs-on: ubuntu-latest
@@ -25,8 +36,8 @@ jobs:
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKERHUB_PASSWORD}}
     - name: Build and push Docker images
-  # You may pin to the exact commit or the version.
-  # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
+      # You may pin to the exact commit or the version.
+      # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
       uses: docker/build-push-action@v3.0.0
       with:
            context: ./
@@ -37,4 +48,6 @@ jobs:
            tags: ${{ secrets.DOCKERHUB_USERNAME}}/docker-node-example:latest
            # Sets the target stage to build
            target: prod
+           
+
     
